# dataframetype

./: pyproject.toml
example/: hello.py  pyproject.toml
src/dataframetype/: __init__.py
test/: dataframetype_test.py
