[project]
name = "dataframetype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
